# lightio

./: .gitignore  CMakeLists.txt  csvio.hpp  csvio_tests.cpp  ioprobe.hpp  ioprobe_test.cpp  octio.hpp  octio_impl.hpp  octio_test.cpp  octio_write_test.cpp
test_data/: test_octio.mat
